force-app/main/default/objects/Activity/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <label>Expected Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>