force-app/main/default/objects/Activity/fields/Finance_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Ref_Number__c</fullName>
    <inlineHelpText>Reference number from finance</inlineHelpText>
    <label>Finance Reference Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>