force-app/main/default/objects/Activity/fields/Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Amount__c</fullName>
    <label>Milestone Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>